# rustywrapper

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENCE  PYTHON_CONFIGURATION.md  README.md  justfile  pyproject.toml
example/: Cargo.toml  README.md  justfile  pyproject.toml  pyrightconfig.json
example/python/: async_endpoints.py  endpoints.py  pool_handlers.py  pool_workers.py  rustywrapper.py
example/src/: main.rs
example/typings/: async_runtime.pyi  chimera.pyi  snaxum.pyi
python/: async_runtime.py  chimera.py  endpoints.py  pool_handlers.py  pool_workers.py  rustywrapper.py  snaxum.py
src/: config.rs  dispatcher.rs  error.rs  lib.rs  main.rs  python_handlers.rs  python_pool.rs  python_runtime.rs  rust_handlers.rs
