[package]
name = "rustywrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
