[package]
name = "snaxum"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Flask-style Python routing for Rust/Axum applications"
readme = "README.md"
repository = "https://github.com/your-username/snaxum"
keywords = ["python", "axum", "pyo3", "web", "routing"]
categories = ["web-programming", "api-bindings"]
exclude = ["example/", "CLAUDE.md"]

[lib]
name = "snaxum"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
thiserror = "1"
