[project]
name = "rustywrapper"
version = "0.1.0"
description = "Python endpoints for RustyWrapper POC"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
]

[tool.uv]
dev-dependencies = []

[tool.basedpyright]
# Tell the type checker that python/ is a source root
extraPaths = ["python"]
pythonVersion = "3.12"
